# ipc-python-cxx

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
chatgpt/: CMakeLists.txt  recv.py  send.cpp
cxx-src/: CMakeLists.txt  app  main.cpp  shmdemo.c
cxx-src/shm/: shm.h
cxx-src/shmem/: CMakeLists.txt  shmem.cpp  shmem.h
cxx-src/zmq-test/: CMakeLists.txt  Dockerfile
cxx-src/zmq-test/config/: version.h.in
cxx-src/zmq-test/src/: filemanager.cpp  filemanager.h  main.cpp
python-src/: Dockerfile  main.py
python-src/zmq-sample/: client.py  server.py
